--- a/.github/workflows/metrics-collector.yml
+++ b/.github/workflows/metrics-collector.yml
@@ -1,6 +1,8 @@
 name: Collect PR Pickup Time Metrics
 
 on:
+  schedule:
+    - cron: '0 9 * * *'  # Run at 4am CDT (9am UTC)
   workflow_dispatch:      # Allow manual triggering
 
 jobs:
@@ -8,10 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       
       - name: Set up Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: '16'
           cache: 'npm'
@@ -20,14 +22,13 @@ jobs:
         run: npm ci
       
       - name: Create service account key file
-        run: echo "${{ secrets.GCP_SA_KEY }}" > service-account-key.json
+        run: echo "${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}" > service-account-key.json
       
       - name: Collect and upload metrics
         uses: ./
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           config-path: './config.json'
-          gcp-service-account-key: ${{ secrets.GCP_SA_KEY }}
           bigquery-project: ${{ secrets.BIGQUERY_PROJECT_ID }}
           bigquery-dataset: 'github_metrics'
           bigquery-table: 'pr_pickup_time'
@@ -37,3 +38,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BIGQUERY_PROJECT_ID: ${{ secrets.BIGQUERY_PROJECT_ID }}
+          SERVICE_ACCOUNT_KEY_PATH: './service-account-key.json'
