--- a/.github/workflows/metrics-collector.yml
+++ b/.github/workflows/metrics-collector.yml
@@ -22,7 +22,10 @@ jobs:
         run: npm ci
       
       - name: Create service account key file
-        run: echo "${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}" > service-account-key.json
+        run: |
+          echo '${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}' > service-account-key.json
+          # Verify the file is valid JSON
+          cat service-account-key.json | jq . > /dev/null
       
       - name: Collect and upload metrics
         uses: ./
