--- a/.github/workflows/metrics-collector.yml
+++ b/.github/workflows/metrics-collector.yml
@@ -11,22 +11,22 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      
+
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '16'
           cache: 'npm'
-          
+
       - name: Install dependencies
         run: npm ci
-      
+
       - name: Create service account key file
         run: |
           echo '${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}' > service-account-key.json
           # Verify the file is valid JSON
           cat service-account-key.json | jq . > /dev/null
-      
+
       - name: Collect and upload metrics
         uses: ./
         with:
@@ -34,9 +34,9 @@ jobs:
           config-path: './config.json'
           bigquery-project: ${{ secrets.BIGQUERY_PROJECT_ID }}
           bigquery-dataset: 'github_metrics'
-          bigquery-table: 'pr_pickup_time'
+          bigquery-table: 'first_review'
           target-branch: 'main'
-          lookback-days: '30'
+          lookback-days: '5'
           print-only: 'false'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
