--- a/.github/actions/eng-metrics/package.json
+++ b/.github/actions/eng-metrics/package.json
@@ -10,8 +10,8 @@
   "scripts": {
     "start": "node src/index.js",
     "start:print": "node src/index.js --print-only",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "lint": "eslint src/**/*.js"
+    "test": "node --experimental-vm-modules ../../../node_modules/jest/bin/jest.js",
+    "lint": "../../../node_modules/.bin/eslint src/**/*.js"
   },
   "keywords": [
     "github",
@@ -30,5 +30,8 @@
   "devDependencies": {
     "eslint": "^9.30.0",
     "jest": "^30.0.3"
+  },
+  "engines": {
+    "node": "20.18.1"
   }
 }
