--- a/.github/workflows/collect-eng-metrics.yml
+++ b/.github/workflows/collect-eng-metrics.yml
@@ -17,9 +17,11 @@ jobs:
         with:
           node-version: '20.18.1'
           cache: 'npm'
+          cache-dependency-path: .github/actions/eng-metrics/package-lock.json
 
       - name: Install dependencies
         run: npm ci
+        working-directory: .github/actions/eng-metrics
 
       - name: Create service account key file
         run: |
