--- a/.github/workflows/collect-eng-metrics.yml
+++ b/.github/workflows/collect-eng-metrics.yml
@@ -29,7 +29,7 @@ jobs:
           # Verify the file is valid JSON
           cat service-account-key.json | jq . > /dev/null
 
-      - name: Collect and upload metrics
+      - name: Collect and upload engineering metrics
         uses: ./.github/actions/eng-metrics
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
