--- a/.github/actions/eng-metrics/package.json
+++ b/.github/actions/eng-metrics/package.json
@@ -36,6 +36,7 @@
     "octokit": "^5.0.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.30.0",
     "eslint": "^9.30.0",
     "jest": "^30.0.3"
   },
