Renaming first_review to pr_first_review.

--- a/.github/actions/eng-metrics/config.json
+++ b/.github/actions/eng-metrics/config.json
@@ -10,7 +10,7 @@
   "metrics": {
     "timeToFirstReview": {
       "enabled": true,
-      "tableName": "first_review"
+      "tableName": "pr_first_review"
     },
     "timeToMerge": {
       "enabled": true,
